feat(upload): Implement json writer
