# docs/swagger.json
@@ -27,7 +27,7 @@
                 }
             }
         },
-        "/upload": {
+        "/upload/": {
             "post": {
                 "description": "Recieve plugins's binary and metadata from Gitlab CI",
                 "consumes": [
@@ -86,6 +86,9 @@
             "type": "object",
             "properties": {
                 "os": {
+                    "type": "string"
+                },
+                "path": {
                     "type": "string"
                 },
                 "plugin_id": {
